--- a/pages/index.html
+++ b/pages/index.html
@@ -14,27 +14,30 @@
         <div class="log"></div>
         <div>
           <ul class="nav">
-            <li>HOME</li>
-            <li>ABOUT ME</li>
-            <li>WORK</li>
-            <li>CONTACT</li>
+            <li><a class="cool-link" href="#">HOME</a></li>
+            <li><a class="cool-link" href="#">ABOUT ME</a></li>
+            <li><a class="cool-link" href="#">WORK</a></li>
+            <li><a class="cool-link" href="#">CONTACT</a></li>
           </ul>
         </div>
       </div>
       <div class="vertical-bar-left"></div>
       <div class="vertical-bar-right"></div>
     </div>
-    <h1 class="hero-header">
-      Hey, I'm <br />
-      <span class="gradient-text">Filip Tsolov</span>
-    </h1>
-    <p>
-      UI/UX Designer, Frontend Developer & <br />
-      Graphic Content creator
-    </p>
     <div>
-      <a href="#" class="button">👋🏻 Get In Touch</a>
+      <h1 class="hero-header">
+        Hey, I'm <br />
+        <span class="gradient-text">Filip Tsolov</span>
+      </h1>
+      <p>
+        UI/UX Designer, Frontend Developer & <br />
+        Graphic Content creator
+      </p>
+      <div>
+        <a href="#" class="button">👋🏻 Get In Touch</a>
+      </div>
     </div>
+
     <div>
       <img src="../src/icons/arrow.svg" alt="" class="arrow" />
     </div>
