--- a/pages/index.html
+++ b/pages/index.html
@@ -14,17 +14,17 @@
         <div class="log"></div>
         <div>
           <ul class="nav">
-            <li><a class="cool-link" href="#">HOME</a></li>
-            <li><a class="cool-link" href="#">ABOUT ME</a></li>
-            <li><a class="cool-link" href="#">WORK</a></li>
-            <li><a class="cool-link" href="#">CONTACT</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT ME</a></li>
+            <li><a href="#">WORK</a></li>
+            <li><a href="#">CONTACT</a></li>
           </ul>
         </div>
       </div>
       <div class="vertical-bar-left"></div>
       <div class="vertical-bar-right"></div>
     </div>
-    <div>
+    <div class="hero">
       <h1 class="hero-header">
         Hey, I'm <br />
         <span class="gradient-text">Filip Tsolov</span>
@@ -36,10 +36,9 @@
       <div>
         <a href="#" class="button">👋🏻 Get In Touch</a>
       </div>
-    </div>
-
-    <div>
-      <img src="../src/icons/arrow.svg" alt="" class="arrow" />
+      <div>
+        <img src="../src/icons/arrow.svg" alt="" class="arrow" />
+      </div>
     </div>
   </body>
   <script src="../js/index.js">
