added js and latest projects grid

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,9 @@
     <title>Filip Tsolov</title>
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="stylesheet" href="../node_modules/tailwindcss/tailwind.css" />
+    <script src="../js/index.js" defer></script>
   </head>
   <body>
-    <header></header>
     <div class="layout-container">
       <div class="horizontal-bar">
         <div class="log"></div>
@@ -40,6 +40,28 @@
         <img src="../src/icons/arrow.svg" alt="" class="arrow" />
       </div>
     </div>
+  <div id="media" class="background">
+    <h3 class="specialise-in">I specialise in:</h3>
+    <h2 onmouseover="changeBgTo('webDesign')" class="specialise">Web Design</h2>
+    <h2 onmouseover="changeBgTo('UIDesign')" class="specialise">UI/UX Design</h2>
+    <h2 class="specialise">Frontend Development</h2>
+    <h2 class="specialise">Graphic Design</h2>
+    <h2 class="specialise">Motion Graphics</h2>
+  </div>
+  <div class="line"></div>
+  <div>
+    <h2 class="latest">Latest Projects</h2>
+    <p>Check out some of my latest work.</p>
+  </div>
+    <div class="project-container max-w">
+      <div class="grid-container">
+        <div class="grid-child project1"></div>
+        <div class="grid-child project2"></div>
+        <div class="grid-child project3"></div>
+        <div class="grid-child project4"></div>
+      </div>
+    </div>
+
   </body>
   <script src="../js/index.js">
     f
