deniz css masterclass changes

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>About | Filip Tsolov</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About</title>
+  <link rel="stylesheet" href="../styles/styles.css" />
+  <link rel="stylesheet" href="../node_modules/tailwindcss/tailwind.css" />
+  <script src="../js/index.js" defer></script>
 </head>
 <body>
+<div class="layout-container">
+  <div class="horizontal-bar">
+    <div class="log"></div>
+    <div>
+      <ul class="nav">
+        <li><a href="../pages/index.html">HOME</a></li>
+        <li><a href="../pages/about.html">ABOUT ME</a></li>
+        <li><a href="../pages/work.html">WORK</a></li>
+        <li><a href="../pages/contact.html">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="vertical-bar-left"></div>
+  <div class="vertical-bar-right"></div>
+</div>
 
 </body>
 </html>
