added work structure + styling

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,21 +27,32 @@
         <div class="hero">
           <h1 class="hero-header">
             Hey, I'm <br />
-            <span class="gradient-text">✨ Filip Tsolov ✨</span>
+            <span class="gradient-text">Filip Tsolov</span>
           </h1>
           <p>
             UI/UX Designer, Frontend Developer & <br />
-            Graphic Content creator
+            Graphic Content Creator
           </p>
           <div>
             <a href="#" class="button">👋🏻 Get In Touch</a>
           </div>
-          <div>
-            <img src="../src/icons/arrow.svg" alt="arrow" class="arrow" />
+<!--          <div>-->
+<!--            <a href="#projects"> <img src="../src/icons/arrow.svg" alt="arrow" class="arrow" /></a>-->
+<!--          </div>-->
+          <div class="mouse_scroll">
+
+            <div class="mouse">
+              <div class="wheel"></div>
+            </div>
+            <div>
+              <span class="m_scroll_arrows unu"></span>
+              <span class="m_scroll_arrows doi"></span>
+              <span class="m_scroll_arrows trei"></span>
+            </div>
           </div>
         </div>
         <div id="media" class="background">
-          <h3 class="specialise-in">I specialise in:</h3>
+          <h3 class="thin-heading">I specialise in:</h3>
           <h2 onmouseover="changeBgTo('webDesign')" class="specialise">
             Web Design
           </h2>
@@ -57,7 +68,7 @@
           <h2 class="latest">Latest Projects</h2>
           <p>Check out some of my latest work.</p>
         </div>
-        <div>
+        <div id="projects">
           <div class="project-container max-w">
             <div class="grid-container">
               <div class="grid-child project1">
@@ -68,19 +79,19 @@
               </div>
               <div class="grid-child project2">
                 <div class="project-details">
-                  <h3>DaLokal</h3>
+                  <h3>Project</h3>
                   <p>UI Design</p>
                 </div>
               </div>
               <div class="grid-child project3">
                 <div class="project-details">
-                  <h3>DaLokal</h3>
+                  <h3>Project</h3>
                   <p>UI Design</p>
                 </div>
               </div>
               <div class="grid-child project4">
                 <div class="project-details">
-                  <h3>DaLokal</h3>
+                  <h3>Project</h3>
                   <p>UI Design</p>
                 </div>
               </div>
@@ -96,6 +107,12 @@
             </h2>
           </a>
         </div>
+        <ul class="nav nav-bottom">
+          <li><a href="../pages/index.html">HOME</a></li>
+          <li><a href="../pages/about.html">ABOUT ME</a></li>
+          <li><a href="../pages/work.html">WORK</a></li>
+          <li><a href="../pages/contact.html">CONTACT</a></li>
+        </ul>
       </div>
 
     </div>
