--- a/pages/work.html
+++ b/pages/work.html
@@ -23,6 +23,52 @@
       </div>
       <div class="vertical-bar-left"></div>
       <div class="vertical-bar-right"></div>
+      <div class="flex-container">
+        <div>
+          <h2 class="latest">Client Work</h2>
+          <p>Check out some of my latest work.</p>
+        </div>
+        <div class="work-container">
+          <div class="card">
+            <div class="card-upper"></div>
+            <div class="card-bottom">
+              <h3 class="thin-heading" style="color: var(--white);">Web Design</h3>
+              <p>3 projects</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-upper"></div>
+            <div class="card-bottom">
+              <h3 class="thin-heading" style="color: var(--white);">UI/UX Design</h3>
+              <p>3 projects</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-upper"></div>
+            <div class="card-bottom">
+              <h3 class="thin-heading" style="color: var(--white);">Graphic Design</h3>
+              <p>3 projects</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-upper"></div>
+            <div class="card-bottom">
+              <h3 class="thin-heading" style="color: var(--white);">Motion Graphics</h3>
+              <p>3 projects</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-upper"></div>
+            <div class="card-bottom">
+              <h3 class="thin-heading" style="color: var(--white);">Frontend Development</h3>
+              <p>3 projects</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <a href="#" class="button">👋🏻 Get In Touch</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
